<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_menu_revert"
                app:iconSize="20dp"
                app:iconTint="@color/white"
                app:iconTintMode="src_in"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/display_image"
            android:layout_width="403dp"
            android:layout_height="600dp"
            android:contentDescription="@string/app_name"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="85dp" />

        <Button
            android:id="@+id/solve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/solve"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:icon="@android:drawable/ic_menu_send"
            app:iconSize="20dp"
            app:iconTint="@color/white"
            app:iconTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_image" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>